# internal/api/router.go
@@ -16,11 +16,13 @@ func SetupRouter(blogService service.BlogService) *gin.Engine {
 	router.GET("/docs/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	// Initialize the controller with the service
 	blogController := controller.NewBlogController(blogService)
+	//authorController := controller.NewAuthorController(blogService)
+	adminController := controller.NewAdminController(blogService)
 
 	// Define the routes
 	router.GET("/api/blogs-admin", blogController.GetAllBlogs)
 	router.GET("/api/blogs-admin/:id", blogController.GetBlogById)
-	router.PUT("/api/blogs-admin/:id", blogController.UpdateBlog)
+	router.PUT("/api/blogs/:slug", blogController.UpdateBlog)
 	router.DELETE("/api/blogs-admin/:id", blogController.DeleteBlog)
 
 	// project api blog
@@ -30,6 +32,8 @@ func SetupRouter(blogService service.BlogService) *gin.Engine {
 	router.POST("/api/blogs", blogController.CreateBlog)
 	router.GET("/api/blogs/recent-posts", blogController.GetRecentPosts)
 	router.GET("/api/blogs/category/:slug/top6", blogController.Find6BlogsByCategoriesSlug)
-	router.GET("/api//blogs/user/:username/top6", blogController.Find6BlogsByUsernameAndCountViewer)
+	router.GET("/api/blogs/user/:username/top6", blogController.Find6BlogsByUsernameAndCountViewer)
+	router.GET("/api/admin/blogs", adminController.GetAllBlogsForAdmin)
+
 	return router
 }
